--- a/assets/style.scss
+++ b/assets/style.scss
@@ -75,7 +75,7 @@ html{}
 body{
 	background: $background;
 	color: $text;
-	font: 400 1em/1.25 $font;
+	font: 400 6vw/1.25 $font;
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
 	letter-spacing: -0.005em;
@@ -83,9 +83,7 @@ body{
 	text-rendering: optimizeLegibility;
 	transition: background 0.5s ease-in-out;
 
-	@include r(sm){
-		font-size: 2vw;
-	}
+	@include r(sm){}
 
 	@include r(md){}
 
