--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,15 @@
+:root {
+  --background: $white;
+  --text: $black;
+}
+
+@media screen and (prefers-color-scheme: dark) {
+  :root {
+    --background: $black;
+    --text: $white;
+  }
+}
+
 @font-face {
   font-family: 'Reformat Grotesk';
   src: url("fonts/ReformatGrotesk-Regular.woff2") format("woff2"), url("fonts/ReformatGrotesk-Regular.woff") format("woff");
@@ -447,7 +459,9 @@ template {
 
 body {
   background: #000000;
+  background: var(--background);
   color: #ffffff;
+  color: var(--text);
   font: 400 5.9vw/1.25 Reformat Grotesk, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -459,7 +473,7 @@ body {
 }
 
 a {
-  color: #ffffff;
+  color: inherit;
   text-decoration: none;
 }
 
@@ -515,6 +529,7 @@ ul, li {
   display: flex;
   min-height: 100vh;
   padding: 1rem;
+  padding-top: 0.2rem;
 }
 
 .name {
