--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,14 @@
 :root {
-  --background: $white;
-  --text: $black;
+  --black: #000;
+  --white: #fff;
+  --background: var(--white);
+  --text: var(--black);
 }
 
 @media screen and (prefers-color-scheme: dark) {
   :root {
-    --background: $black;
-    --text: $white;
+    --background: var(--black);
+    --text: var(--white);
   }
 }
 
