Rewrote JS to vanilla, removed jQuery and unused JS files. Removed unused SCSS, simplified folder structure.

--- a/assets/style.css
+++ b/assets/style.css
@@ -540,6 +540,10 @@ ul, li {
 
 .description {
   display: inline;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .title {
