Increased line-height

--- a/assets/style.css
+++ b/assets/style.css
@@ -464,7 +464,7 @@ body {
   background: var(--background);
   color: #ffffff;
   color: var(--text);
-  font: 400 5.9vw/1.15 Reformat Grotesk, Arial, sans-serif;
+  font: 400 5.9vw/1.25 Reformat Grotesk, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   letter-spacing: -0.005em;
@@ -472,6 +472,12 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-transition: background 0.5s ease-in-out;
   transition: background 0.5s ease-in-out;
+}
+
+@media only screen and (min-width: 75em) {
+  body {
+    line-height: 1.2;
+  }
 }
 
 a {
