Updated projects, changed to list view

--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@
     margin: 0;
   }
 
+  ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
   p {
     margin: 0;
   }
@@ -77,12 +83,21 @@
     margin-left: calc(var(--space) * 2);
   }
 
+    #projects-list{
+      margin-left: calc(var(--space));
+    }
+
+      #projects-list li{
+        padding-left: calc(var(--space));
+        text-indent: calc(var(--space) * -0.5);
+      }
+
   #other{
-    margin-left: calc(var(--space) * 3);
+    margin-left: calc(var(--space) * 4);
   }
 
   #contact{
-    margin-left: calc(var(--space) * 4);
+    margin-left: calc(var(--space) * 5);
   }
 
 @media only screen and (min-width: 750px){
