--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@
           transform: translate(calc(-100% - 0.5em), 0.4em);
         }
 
-          @media (pointer: fine) {
+          @media (hover: hover) {
             #projects-list a:hover:after{
               opacity: 1;
             }
