--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 :root{
-  --space: 1em;
+  --space: 1.5em;
 }
 
 @media only screen and (min-width: 750px){
@@ -27,7 +27,7 @@
   body {
     background: white;
     color: black;
-    font: 400 1.6rem/1.1 Reformat Grotesk, Arial, sans-serif;
+    font: 400 1.6rem/1.2 Reformat Grotesk, Arial, sans-serif;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
     letter-spacing: -0.005em;
@@ -143,6 +143,7 @@
 @media only screen and (min-width: 750px){
   body{
     font-size: 2.2vw;
+    line-height: 1.1;
   }
 }
 
