--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@
         #projects-list a:after{
           content: "";
           font-size: 1.2rem;
+          letter-spacing: 0.01em;
           opacity: 0;
           position: absolute;
             top: 0;
