--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
 }
 
 :root{
@@ -104,7 +105,7 @@
           position: absolute;
             top: 0;
             left: 0;
-          transform: translate(calc(-100% - 0.5em), 0.4em);
+          transform: translate(calc(-100% - 0.5em), 0.4vw);
         }
 
           @media (hover: hover) {
