--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@
           font-size: 1.2rem;
           letter-spacing: 0.01em;
           opacity: 0;
+          pointer-events: none;
           position: absolute;
             top: 0;
             left: 0;
