--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@
           text-indent: calc(-1 * var(--space) * 0.5);
         }
 
-        #projects-list a:after{
+        #projects-list a:before{
           content: "";
           font-size: 1.2rem;
           letter-spacing: 0.01em;
@@ -112,30 +112,30 @@
           transform: translate(calc(-100% - 0.5em), 0.4vw);
           width: 8rem;
         }
-
+        
           @media (hover: hover) {
-            #projects-list a:hover:after{
+            #projects-list a:hover:before{
               opacity: 1;
             }
           }
 
-          #projects-list a.heydays:after{
+          #projects-list a.heydays:before{
             content: "Heydays";
           }
 
-          #projects-list a.mariuskim:after{
+          #projects-list a.mariuskim:before{
             content: "marius.kim";
           }
 
-          #projects-list a.openinghours:after{
+          #projects-list a.openinghours:before{
             content: "Opening Hours";
           }
 
-          #projects-list a.snohetta:after{
+          #projects-list a.snohetta:before{
             content: "Snøhetta";
           }
 
-          #projects-list a.personal:after{
+          #projects-list a.personal:before{
             content: "Self-initiated";
           }
 
